openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-config
    version: latest
  name: spring-boot-config
  namespace: spring-boot-config
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    deploymentconfig: spring-boot-config
  sessionAffinity: None
  type: ClusterIP
