openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-boot-config
    version: latest
  name: spring-boot-config
  nampespace: spring-boot-config
spec:
  path: /
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: spring-boot-config
    weight: 100
  wildcardPolicy: None
